# kookbook

./: .flatpak-manifest.json  .gitlab-ci.yml  .kde-ci.yml  AndroidManifest.xml  CMakeLists.txt  COPYING  README
autotests/: CMakeLists.txt
autotests/parsertest/: CMakeLists.txt  ingredientsextractortest.cpp  recipeparsertest.cpp
autotests/parsertest/data/: couscous.recipe.md  twoingredients.recipe.md
converter/: CMakeLists.txt  krecipes.py
doc/: intro.md
icons/: icons.qrc
src/: CMakeLists.txt  activedocument.cpp  activedocument.h  activedocumentlistener.h  main.cpp  mainwindow.cpp  mainwindow.h  scanner.cpp  scanner.h
src/core/: CMakeLists.txt  activedocument.cpp  activedocument.h  scanner.cpp  scanner.h
src/core/parser/: CMakeLists.txt  ingredientsextractor.cpp  ingredientsextractor.h  recipedocument.cpp  recipedocument.h  recipeparser.cpp  recipeparser.h
src/desktop/: CMakeLists.txt  kookbook.desktop  main.cpp  mainwindow.cpp  mainwindow.h  org.kde.kookbook.appdata.xml  org.kde.kookbook.desktop
src/desktop/panes/: CMakeLists.txt  fspane.cpp  ingredientsparserpane.cpp  ingredientsparserpane.h  listpane.cpp  mainpane.cpp  mainpane.h  metadatapane.cpp  panebase.cpp  panebase.h  rawviewpane.cpp  treepane.cpp
src/doc/: docs.qrc  intro.md  template.md
src/icons/: sc-apps-kookbook.svgz
src/panes/: CMakeLists.txt  fspane.cpp  fspane.h  ingredientsparserpane.cpp  listpane.cpp  listpane.h  mainpane.cpp  mainpane.h  metadatapane.cpp  metadatapane.h  panebase.h  rawviewpane.cpp  rawviewpane.h  treepane.cpp  treepane.h
src/parser/: CMakeLists.txt  ingredientsextractor.cpp  ingredientsextractor.h  recipedocument.h  recipeparser.cpp  recipeparser.h
src/touch/: CMakeLists.txt  documentloader.cpp  documentloader.h  kookbooktouch.desktop  main.cpp  org.kde.kookbooktouch.desktop  resources.qrc  scanneradapter.cpp  scanneradapter.h
src/touch/qml/: FileOpen.qml  Help.qml  MainPage.qml  Recipe.qml  SelectFolder.qml  main.qml
src/touch/utils/: CMakeLists.txt  dirmodel.cpp  dirmodel.h  standardpaths.cpp  standardpaths.h
